@@ -34,9 +34,9 @@ xi <- interpolationTransform(x)
 xd <- derivativeTransform(x)
 xrgr <- rgrTransform(x)
 #plotRTCA(xrgr, xlim=c(35, 80), ylim=c(-0.2, 0.2))
-plotRTCA(sliceRTCA(x,0, 80)[,c(11,13)], type="l", col="black", ylim=c(0, 1.5))
+plot(sliceRTCA(x,0, 80)[,c(11,13)], type="l", col="black", ylim=c(0, 1.5))
 abline(h=0, col=2, lty=5)
-plotRTCA(sliceRTCA(xrgr, 20, 80)[,c(11,13)], type="l", col="black")
+plot(sliceRTCA(xrgr, 20, 80)[,c(11,13)], type="l", col="black")
 abline(h=0, col=2, lty=5)
 
 plotGridEffect(x)
